--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <title>JERRY PRO :: (～￣▽￣)～</title>
   <meta charset="UTF-8">
   <meta name="keywords" content="jerrypro" />
-  <meta
-    name="description"
-    content="A personal website about JERRY"
-  />
+  <meta name="description" content="A personal website about JERRY" />
   <meta name="author" content="JERRYPro" />
   <link rel="shortcut icon" type="image/ico" href="./icon.png">
   <!--Favicon for Chrome-->
@@ -270,7 +267,8 @@
         <div class="Slides fade">
           <a target="_blank"
             href="https://nr2z-my.sharepoint.com/:f:/g/personal/like_dz_nr2z_onmicrosoft_com/Ej5IS2chKHFFm9VXLzevWmMBRuNwFPK_hg3oFG76NulK1A?e=LNdLxc">
-          <img id="m-silde" src="./Resources/Slideshowimg/Dark_with_windows_SE.PNG" style="width:100%" alt="JERRY PRO">
+            <img id="m-silde" src="./Resources/Slideshowimg/Dark_with_windows_SE.PNG" style="width:100%"
+              alt="JERRY PRO">
           </a>
         </div>
 
@@ -351,8 +349,26 @@
 
   <footer>
     <div class="bgimg-2">
-      <div class="caption">
-        <span class="border">JERRY PRO :: Powered by JERRY, Copyright © 2022 JERRY 版權所有</span>
+      <div class="footlink" id="footlink">
+        <ul class="footUL" id="footUL1">
+          <h2>友情連結</h2>
+          <a href="https://www.youtube.com/@GawrGura" target="_blank"><li>Gawr Gura</li></a>
+          <a href="https://www.youtube.com/@linzin" target="_blank"><li>Linzin 阿哲</li></a>
+          <a href="https://www.youtube.com/@ThioJoe" target="_blank"><li>ThioJoe</li></a>
+          <a href="https://www.youtube.com/@thepcsecuritychannel" target="_blank"><li>The PC Security Channel</li></a>
+        </ul>
+
+        <ul class="footUL" id="footUL2">
+          <h2>Wikipedia</h2>
+          <a href="https://en.wikipedia.org/wiki/Web3" target="_blank"><li>Web 3.0</li></a>
+          <a href="https://en.wikipedia.org/wiki/Non-fungible_token" target="_blank"><li>Non-fungible token</li></a>
+          <a href="https://en.wikipedia.org/wiki/Blockchain" target="_blank"><li>Blockchain</li></a>
+        </ul>
+
+        <ul class="footUL footULCopy" id="footUL2">
+          <h2>© 2022 JERRY 版權所有</h2>
+          <li>JERRY PRO :: Powered by JERRY, All rights reserved</li>
+        </ul>
       </div>
     </div>
   </footer>
