--- a/index.html
+++ b/index.html
@@ -365,6 +365,22 @@
           <a href="https://en.wikipedia.org/wiki/Blockchain" target="_blank"><li>Blockchain</li></a>
         </ul>
 
+        <ul class="footUL" id="footUL2">
+          <h2>Web</h2>
+          <a href="https://www.w3schools.com/default.asp" target="_blank"><li>w3schools</li></a>
+          <a href="https://developer.mozilla.org/en-US/" target="_blank"><li>MDN Web Docs</li></a>
+          <a href="https://github.com/" target="_blank"><li>Github</li></a>
+          <a href="https://www.google.com/inputtools/try/" target="_blank"><li>Google Input Tools</li></a>
+        </ul>
+
+        <ul class="footUL" id="footUL2">
+          <h2>Search Engine</h2>
+          <a href="https://www.google.com/" target="_blank"><li>Google</li></a>
+          <a href="https://yandex.com/" target="_blank"><li>Yandex</li></a>
+          <a href="http://saucenao.com/" target="_blank"><li>SauceNAO</li></a>
+          <a href="https://hk.yahoo.com/?p=us" target="_blank"><li>Yahoo!</li></a>
+        </ul>
+
         <ul class="footUL footULCopy" id="footUL2">
           <h2>© 2022 JERRY 版權所有</h2>
           <li>JERRY PRO :: Powered by JERRY, All rights reserved</li>
