--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     rel="stylesheet">
 </head>
 
-<body class="" id="HW" oncontextmenu="return false;" onload="Themebgloder(),appleBg(),loader(),SlidesReady()">
+<body class="" id="Loading" oncontextmenu="return false;" onload="Themebgloder(),appleBg(),loader()">
   <script type="text/javascript" src="./JS/main.js">Changebg();</script>
   <div id="Sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
