--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </ul>
       </nav>
       <button class="openbtn" onclick="openNav()" id="closeNav">☰</button>
-      <a><button onclick="musicPlayerChecker()" class="buttonTop" id="buttonTop">(～￣▽￣)～</button></a>
+      <a><button class="buttonTop" id="buttonTop">(～￣▽￣)～</button></a>
       <div id="snackbar">青出於藍，而勝於藍！</div>
     </div>
 
