--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <div class="icon">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </div>
-          <a href="https://www.instagram.com/heyajerry/" target="_blank">
+          <a href="https://www.instagram.com/jerry._.by_microsoft_/" target="_blank">
             <span>Instagram</span></a>
         </div>
         <div class="button">
