--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <div class="icon">
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </div>
-          <a href="https://www.instagram.com/jerry._.by_microsoft_/" target="_blank">
+          <a href="https://www.instagram.com/heyajerry/" target="_blank">
             <span>Instagram</span></a>
         </div>
         <div class="button">
@@ -342,7 +342,8 @@
 
   <div class="pre-loder-index" id="pre-loder-index">
     <div class="pre-loder-main">
-      <img src="./Resources/loader/jerrypro-loading.gif" class="load-img" id="load-img" />
+      <!-- <img src="./Resources/loader/jerrypro-loading.gif" class="load-img" id="load-img" /> -->
+      <h2 class="load-font">:)</h2>
     </div>
   </div>
 
