--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <h1 id="h1">JERRY PRO</h1>
       <span class="underlineTop"></span>
       <h2><span>/*</span> 這是關於JERRY的個人主頁; Hello World ! <span>*/</span></h2>
+      <img class="SPhead" src="./Resources/headerBg/jerrypro-chr.png"/>
     </div>
 
     <div class="container">
