--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         </div>
         <font id="font">我是JERRY：一個强迫症，懶癌晚期，二次元的宅</font><br />
         <font id="font1">JERRY來自香港，目前就讀初中。Information Technology - 一切來自熱愛，在香港的電腦課程，一般只會教授簡單的電腦知識，如Scratch、App
-          Inventor等，以“編程塊”的方式。自小的我，對網站開發十分有興趣，偶然在網上發現了W3school，自此就在“它”身上學到了不少知識。由HTML到CSS和JavaScript的前端開發，到後端開發，我仍在學習。
+          Inventor等，以“編程塊”的方式。自小的我，對網站開發十分有興趣，偶然在網上發現了W3school，自此就在“它”身上學到了不少知識。由HTML到CSS和JavaScript的前端開發，到後端開發，我仍在學習。我的興趣範疇：✅Windows(最愛，沒有之一)/Android(root)/Web🔄Artificial intelligence/Python/Linux/Deep learning/Information security
         </font><br />
         <font id="font2">
-          我的夢想是成為軟件工程師，一名小米工程師。「讓每個人都能享受科技的樂趣」這是小米對產品的價值觀，也是我對小米的第一印象。我與小米的“緣分”始於“小米手環2”，憑著對小米的印象和雷軍的經歷，就有了一種說不出來的“好感”，因此我也入坑了小米，成了一個小小的米粉（？😂在二十一世紀，編程不應只是專業領域的知識，而是每個人都掌握的基本能力，在未來，我們要由我們控制AI，而不是AI取代我們。此外，網絡安全也是我感興趣的一個範疇，如今科技發展的成熟，隨之帶來的是重重的安全隱患。
+          我的夢想是成為軟件工程師，一名小米工程師。「讓每個人都能享受科技的樂趣」這是小米對產品的價值觀，也是我對小米的第一印象。我與小米的“緣分”始於“小米手環2”，憑著對小米的印象和雷軍的經歷，就有了一種說不出來的“好感”，因此我也入坑了小米，成了一個小小的米粉（？😂在二十一世紀，編程不應只是專業領域的知識，而是每個人都掌握的基本能力。問你一個小問題，你知道什麽是AI嗎？AI會取代人類嗎？可以肯定地回答你 -- 不會。其實電腦科並不難，離不開都是if/then，而結果只有true/false,只要靠著自己的興趣多好好利用Google你就懂了！偷偷告訴你哦，一開始我連裝Chrome也不會(XD，不用猶豫是那個瀏覽器😶
         </font><br />
         <font id="font3">JERRY Pro是我的個人網站，介紹了我的日常以及興趣。我也藉此發布和展示我的學習成果，感謝你的一路陪伴！</font><br />
       </div>
@@ -331,6 +331,12 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="doyouknow">
+      <h2 class="know-text">//你知道</h2>
+      <h2 class="know-text" id="textKnow"></h2>
+      <h2 class="know-text">嗎?//</h2>
     </div>
   </div>
 
