--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </ul>
       </nav>
       <button class="openbtn" onclick="openNav()" id="closeNav">☰</button>
-      <a><button class="buttonTop" id="buttonTop">(～￣▽￣)～</button></a>
+      <a><button class="buttonTop" id="buttonTop">(๑>؂<๑)</button></a>
       <div id="snackbar">青出於藍，而勝於藍！</div>
     </div>
 
@@ -65,7 +65,7 @@
       </div>-->
 
     <div id="topTitle" class="topTitle">
-      <h1 id="h1">致•2023</h1>
+      <h1 id="h1">致&bull;2023</h1>
       <span class="underlineTop"></span>
       <h2><span>/*</span> 這是關於JERRY的個人主頁; Hello World ! <span>*/</span></h2>
       <img class="SPhead" src="./Resources/headerBg/jerrypro-chr.png"/>
