--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=DynaPuff&family=Palanquin+Dark&family=Shippori+Antique+B1&Roboto:wght@500&family=Silkscreen&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=DynaPuff&family=Palanquin+Dark&family=Shippori+Antique+B1&Roboto:wght@500&family=Silkscreen&display=swap&family=Noto+Sans:wght@800"
     rel="stylesheet">
 </head>
 
@@ -67,7 +67,7 @@
     <div id="topTitle" class="topTitle">
       <h1 id="h1">致&bull;2023</h1>
       <span class="underlineTop"></span>
-      <h2><span>/*</span> 這是關於JERRY的個人主頁; Hello World ! <span>*/</span></h2>
+      <h2><span>/*</span> 這是關於JERRY的個人主頁; happy new year! <span>*/</span></h2>
       <img class="SPhead" src="./Resources/headerBg/jerrypro-chr.png"/>
     </div>
 
