--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link
-    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=DynaPuff&family=Palanquin+Dark&family=Shippori+Antique+B1&Roboto:wght@500&family=Silkscreen&family=Noto+Sans:wght@800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=DynaPuff&family=Palanquin+Dark&family=Shippori+Antique+B1&Roboto:wght@500&family=Silkscreen&display=swap"
     rel="stylesheet">
 </head>
 
@@ -56,7 +56,7 @@
         </ul>
       </nav>
       <button class="openbtn" onclick="openNav()" id="closeNav">☰</button>
-      <a><button class="buttonTop" id="buttonTop">(๑>؂<๑)</button></a>
+      <a><button class="buttonTop" id="buttonTop">(～￣▽￣)～</button></a>
       <div id="snackbar">青出於藍，而勝於藍！</div>
     </div>
 
@@ -65,9 +65,9 @@
       </div>-->
 
     <div id="topTitle" class="topTitle">
-      <h1 id="h1">致&bull;2023</h1>
+      <h1 id="h1">JERRY PRO</h1>
       <span class="underlineTop"></span>
-      <h2><span>/*</span> 這是關於JERRY的個人主頁; happy new year! <span>*/</span></h2>
+      <h2><span>/*</span> 這是關於JERRY的個人主頁; Hello World ! <span>*/</span></h2>
     </div>
 
     <div class="container">
@@ -385,7 +385,7 @@
           <a href="https://www.google.com/" target="_blank"><li>Google</li></a>
           <a href="https://yandex.com/" target="_blank"><li>Yandex</li></a>
           <a href="http://saucenao.com/" target="_blank"><li>SauceNAO</li></a>
-          <a href="https://hk.yahoo.com/?p=us" target="_blank"><li>Yahoo!</li></a>
+          <a href="https://bing.com" target="_blank"><li>Bing</li></a>
         </ul>
 
         <ul class="footUL footULCopy" id="footUL2">
