--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=DynaPuff&family=Palanquin+Dark&family=Shippori+Antique+B1&Roboto:wght@500&family=Silkscreen&display=swap"
     rel="stylesheet">
@@ -337,6 +336,14 @@
       <h2 class="know-text" id="textKnow"></h2>
       <h2 class="know-text">嗎?//</h2>
     </div>
+  </div>
+
+  <div class="grayIcon">
+    <img class="grayMainicon" src="./Resources/icon/gray/jp.png"/>
+    <img class="grayMainicon" src="./Resources/icon/gray/clock_j.png"/>
+    <img class="grayMainicon" src="./Resources/icon/gray/windows.png"/>
+    <img class="grayMainicon" src="./Resources/icon/gray/android.png"/>
+    <img class="grayMainicon" src="./Resources/icon/gray/magisk-_managerpng.png"/>
   </div>
 
   <div style="position:relative;" class="famousCard">
