--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       </div>-->
 
     <div id="topTitle" class="topTitle">
-      <h1 id="h1">JERRY PRO</h1>
+      <h1 id="h1"><img class="byw81" id="byw81" src="./Resources/icon/Windows_8_logo_and_wordmark.svg"></h1>
       <span class="underlineTop"></span>
-      <h2><span>/*</span> 這是關於JERRY的個人主頁; Hello World ! <span>*/</span></h2>
+      <h2><span>/*</span> 根據預期, Windows 8.1已於2023年1月10日停止支援! <span>*/</span></h2>
     </div>
 
     <div class="container">
@@ -427,5 +427,4 @@
   </footer>
 
 </body>
-
 </html>
